<resources>
    <string name="app_name">Contact Manager</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_contact_info">Relationship Notes</string>
    <string name="professional">Professional</string>
    <string name="personal">Personal</string>
    <string name="save">Save</string>
    <string name="hint_contact_list">The List is Empty</string>
    <string name="fabDescription">button next activity</string>
</resources>